--- a/app/View/index.html
+++ b/app/View/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo</title>
+    <title>Projeto</title>
 </head>
 <header>
 <div class="menu">
