Alterações no Nav_Bar, fundadores, e footer

--- a/app/View/index.html
+++ b/app/View/index.html
@@ -1,81 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto</title>
-</head>
-<header>
-<div class="menu">
-    <div>
-        <a href="" class="icone">icone</a>
-    </div>
-    <div>
-        <a href="" class="slogan">slogan</a>
-    </div>
+    <head>
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Save Money</title>
+
+        <!-- CSS BOOTSTRAP-->
+            
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    </head>
+
+
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Save Money</a>
+                <button class="navbar-toggler" type="button"></button>
+                
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Plataforma</a>
+                      </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Sobre nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Objetivo</a>
+                      </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-3 my-sm-0" type="submit">Pesquisar</button>
+                  </form>
+                  <button class="btn btn-outline-success my-3 my-sm-0" type="submit">Acesso</button>
+                </div>
+              </nav>
+           
+            </header>
+        <div class="container-fluid">
+            <div class="banner"style="text-align:center; padding:50px; font-size:20px">
+                Banner
+                <div class="info">                    
+                    <button class="btn btn-outline-dark my-3 my-sm-0" type="button">Cadastre-se</button>
+                    <button class="btn btn-outline-dark my-3 my-sm-0" type="button">Saiba Mais</button>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="plataforma">
+                <h1 style="font-size:30px;padding:20px 20px">Nossa Plataforma:</h1>
+                <p style="font-size:20px;padding:20px 20px">
+                    Informações sobre a plataforma e tecnologia utilizada.
+                </p>
+                <div class="img_grafico">
+                    Imagem ilustrativa da plataforma com graficos e valores.
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container-fluid">
+            <div class="plataforma">
+                <h1 style="font-size:30px;padding:20px 20px">Nosso Objetivo:</h1>
+                <p style="font-size:20px;padding:20px 20px">
+                Publico alvo e descrição da solução
+                </p>
+                <div class="img_grafico">
+                    Imagem relativa com graficos.
+                </div>                
+            </div>
+        </div>
+        <hr>
+
+       <div class="plataforma"> 
+            <div class="container-fluid">
+                <div id="fundadores" class="row">
+                    <div class="col-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Fulaninho</h5>
+                                <p class="card-text">Info Fulaninho</p>
+                                <a href="#" class="btn btn-primary">Saiba Mais</a>
+                            </div>
+                        </div>                
+                    </div>
+                    <div class="col-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Fulaninho</h5>
+                                <p class="card-text">Info Fulaninho</p>
+                                <a href="#" class="btn btn-primary">Saiba Mais</a>
+                            </div>
+                        </div>                
+                    </div>
+                    <div class="col-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Fulaninho</h5>
+                                <p class="card-text">Info Fulaninho</p>
+                                <a href="#" class="btn btn-primary">Saiba Mais</a>
+                            </div>
+                        </div>                
+                    </div>
+                    <div class="col-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Fulaninho</h5>
+                                <p class="card-text">Info Fulaninho</p>
+                                <a href="#" class="btn btn-primary">Saiba Mais</a>
+                            </div>
+                        </div>                
+                    </div>
+                    <div class="col-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Fulaninho</h5>
+                                <p class="card-text">Info Fulaninho</p>
+                                <a href="#" class="btn btn-primary">Saiba Mais</a>
+                            </div>
+                        </div>                
+                    </div>            
+                </div> 
+            </div>
+       </div>
+        <hr>
+
+        <footer>    
+            <div class="container">
+                <div class="row">
+                    <div class="col-8">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3705.368042345735!2d-43.347074785589456!3d-21.76601240362973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x989b5f107f26e7%3A0xccaab1c690642b25!2sFaculdade%20Metodista%20Granbery!5e0!3m2!1sen!2sbr!4v1599435319319!5m2!1sen!2sbr" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>                
+                    </div>
+                    <div class="col-4">                
+                        <p >Nosso Endereço</p>
+                        <p ">Rua Romeiro Brito</p>
+                        <p ">Bairro Jorge da Penha</p>
+                        <p ">20340 Ap.20</p>
+                        <a href="">Links</a><br>
+                        <a href="">Contato</a>
+                    </div>
+                    
+                </div>
+            </div>               
+        
+
+            <!-- BOOTSTRAP JS-->
+            <script src="js/jquery.js"></script>
+            <script src="js/bootstrap.bundle.min.js"></script>
+            
+        </footer>       
     
-    <div class="links">
-        <a href="">Plataforma</a> |
-        <a href="">Objetivo</a> |
-        <a href="">Sobre-nós</a> |
-        <a href="">Acesso</a>
-    </div>
-        
-</div>
-</header>
-
-<body>
-    <div class="banner"style="text-align:center; padding:30px; font-size:20px">
-        Banner
-        <div class="info">
-            <a href="">Cadastre-se</a>
-            <a href="">Saiba Mais</a>
-        </div>
-    </div>
-    <div class="plataforma">
-        <h1 style="font-size:30px;padding:20px 20px">Nossa Plataforma:</h1>
-        <p style="font-size:20px;padding:20px 20px">
-            Informações sobre a plataforma e tecnologia utilizada.
-        </p>
-        <div class="img_grafico">
-            Imagem ilustrativa da plataforma com graficos e valores.
-        </div>
-    </div>
-    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-    <div class="plataforma">
-        <h1 style="font-size:30px;padding:20px 20px">Nosso Objetivo:</h1>
-        <p style="font-size:20px;padding:20px 20px">
-           Publico alvo e descrição da solução
-        </p>
-        <div class="img_grafico">
-            Imagem relativa com graficos.
-        </div>
-        
-    </div>
-    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-
-    <div class="time">
-        <h1 style="font-size:30px;text-align:center">Nosso Time:</h1>
-        <div class="fotos">
-        <div class="foto">insira foto</div>
-        <div class="foto">insira foto</div>
-        <div class="foto">insira foto</div>
-        <div class="foto">insira foto</div>
-        <div class="foto">insira foto</div>
-        </div>
-        
-    </div>
-        
-        
-    </div>
-
-</body>
-<footer>
-    <div class="contato">
-        <a href="">Links</a>
-        <a href="">Contato</a>
-    </div>
-    
-</footer>
+    </body>
+   
 </html>
