--- a/app/View/style.css
+++ b/app/View/style.css
@@ -8,6 +8,13 @@ body {
    
    
 }
+
+hr{
+    height: 2px;
+    border-width: 0;
+    color: gray;
+    background-color:gray;
+}
 .menu {
     background-color: rgba(43, 46, 39, 0.822);
     text-align: right;
@@ -63,9 +70,9 @@ body {
     
 }
 .banner {
-    width: max;
-    height: 400px;
-    background-color: red;
+    
+    height: 550px;
+    background-color:red ;
 }
 .banner .info {
     padding-top: 300px;
@@ -86,7 +93,7 @@ body {
 }
 .plataforma {
     width: 100%;
-    height: 250px;
+    height: 270px;
     background: white;
     position: relative;
    
@@ -95,7 +102,7 @@ body {
 .plataforma .img_grafico {
     
     width: 40%;
-    height: 100px;
+    height: 70px;
     background: cornflowerblue;  
     
     float: right;
@@ -117,6 +124,8 @@ body {
 }
 footer{
     background:rgb(245, 193, 245);
+    height: 400px;
+    padding: 40px;
     
 }
 .contato {
