--- a/app/View/index.html
+++ b/app/View/index.html
@@ -117,7 +117,7 @@
 
              
                 <div class="container-fluid">
-                    <div class="row w">
+                    <div class="row">
                         <div class="col-2">
                             <div class="card">
                                 <img src="img/edmilson.jpg" class="card-img-top" alt="...">
