--- a/Save_Money_1/style.css
+++ b/Save_Money_1/style.css
@@ -16,10 +16,24 @@ hr{
 
 
 
-footer{
+#footer_inicio{
     background:rgb(32, 145, 66);
     height: 400px;
     padding: 40px;
     
+}
+
+#nav_cadastro{
+    background-color: green;
+    width: 100%;
+    height: 40px;
+}
+
+#footer_cadastro{
+    background-color: green;
+    width: 100%;
+    height: 40px;
+    position:absolute;
+    bottom:0;
 }
 
