--- a/Save_Money_1/style.css
+++ b/Save_Money_1/style.css
@@ -16,27 +16,14 @@ hr{
 
 
 
-#footer_inicio{
-    background:rgb(32, 145, 66);
-    height: 400px;
-    padding: 40px;
-    
-}
-
-#nav_cadastro{
-    background-color: green;
-    width: 100%;
-    height: 40px;
-}
-
-#footer_cadastro{
-    background-color: green;
-    width: 100%;
-    height: 40px;
-    position:absolute;
-    bottom:0;
-}
 
 #img_carrosel{
     height: 528px;
 }
+
+nav{
+    height: 100px;
+    padding: 80px;
+
+}
+
