--- a/Save_Money_2/css/style.css
+++ b/Save_Money_2/css/style.css
@@ -775,8 +775,9 @@ select {
   border-color: #ffffff; }
   @media (min-width: 992px) {
     .hero__button:hover {
-      color: #e3e3e3;
-      border-color: #e3e3e3; } }
+      background: rgba(255, 255, 255, 0.904);
+      color: #696868;
+      border-color: #e3e3e3d2; } }
 
 .hero__sub {
   -js-display: flex;
@@ -1237,10 +1238,3 @@ select {
         border-bottom: 1px solid #65b53d;
         transform: none;
         transition: none; } }
-
-
-.hero__button:hover {
-  background: rgba(255, 255, 255, 0.534);
-  color: rgb(54, 54, 54);
-  border-color: #58ff04;
-}
