Iniciado a criação dos formularios do Dashboard

--- a/Save_Money_2/app/css/style.css
+++ b/Save_Money_2/app/css/style.css
@@ -1238,3 +1238,8 @@ select {
         border-bottom: 1px solid #65b53d;
         transform: none;
         transition: none; } }
+
+li a:hover{
+  background-color: #65b53d;
+  color: white; 
+}
