--- a/Save_Money/app/css/style.css
+++ b/Save_Money/app/css/style.css
@@ -247,7 +247,9 @@ h1 {
   font-size: 2.074em; }
 
 h2 {
-  font-size: 1.728em; }
+  font-size: 1.728em; 
+  text-align: center;  
+}
 
 h3 {
   font-size: 1.44em; }
@@ -296,7 +298,7 @@ button, .button {
   transition: 0.7s;
   white-space: nowrap;
   cursor: pointer;
-  background-color: transparent;
+  background-color: white;
   border-radius: 30px;
   margin-bottom: 1.3em;
   transition: 0.7s;
@@ -393,7 +395,7 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
 textarea {
   appearance: none;
   border: 1px solid #eee;
-  width: 100%;
+  width: 60%;
   transition: 0.7s;
   color: #111;
   font-family: "Lato", sans-serif;
@@ -404,7 +406,7 @@ textarea {
   margin-bottom: 1.4em;
   display: block;
   resize: none;
-  min-height: 8em;
+  min-height: 5px;
   outline: 0; }
   textarea:focus {
     border-color: #81c95c;
