--- a/Save_Money/app/css/style.css
+++ b/Save_Money/app/css/style.css
@@ -292,13 +292,13 @@ button, .button {
   display: inline-block;
   padding: 12pt 30pt;
   line-height: 1.7;
-  border: 1px solid #81c95c;
-  color: #81c95c;
+  border: 3px solid white;
+  color: white;
   font-weight: 400;
   transition: 0.7s;
   white-space: nowrap;
   cursor: pointer;
-  background-color: white;
+  background-color:  #65b53d;
   border-radius: 30px;
   margin-bottom: 1.3em;
   transition: 0.7s;
@@ -363,7 +363,10 @@ form {
 
 .form {
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  
+  
+}
 
 label {
   margin-bottom: 2pt;
@@ -371,13 +374,15 @@ label {
   text-align: left;
   color: #666;
   font-size: 0.9em;
-  padding-left: 10pt; }
+  padding-left: 10pt;
+  font-size: 24px;
+}
 
 
 
 input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="date"], input[type="tel"], input[type="url"], input[type="password"] {
   appearance: none;
-  border: 1px solid #eee;
+  border: 5px solid #65b53d;
   width: 100%;
   transition: 0.7s;
   color: rgba(124, 122, 122, 0.76);
@@ -945,7 +950,11 @@ select {
 
 .footer {
   background-color: #ffffff;
-  padding: 36pt 0; }
+  padding: 36pt 0;
+  width: 100%;
+  height: 100px;
+  
+}
 
 .footer__inner {
   -js-display: flex;
@@ -1026,6 +1035,7 @@ select {
   min-height: calc( 100vh - 188px);
   -js-display: flex;
   display: flex;
+  border-color:  #65b53d ;
   align-items: center;
   flex-direction: column;
   justify-content: center; }
@@ -1297,7 +1307,7 @@ a {
   --bg-filter-opacity: 0.5;
   background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img);
   height: 20em;
-  width: 15em;
+  width: 55em;
   font-size: 1.5em;
   color: white;
   border-radius: 1em;
@@ -1313,6 +1323,11 @@ a {
   overflow: hidden;
   border: 10px solid #ccc;
   text-decoration: none;
+  margin: 1em 1em 1em 1em;
+  
+  
+  
+  
 }
 
 .card:hover {
@@ -1456,3 +1471,4 @@ a {
     margin: 0;
   }
 }
+
