--- a/Save_Money_2/Save_Money_2/View/objetivo.html
+++ b/Save_Money_2/Save_Money_2/View/objetivo.html
@@ -26,10 +26,10 @@
 							<ul class="vMenu">
 								<li><a href="dashboard.html">Inicio</a></li>
 								<li><a href="#" class="vMenu--active">Visão Geral</a></li>
-								<li><a href="sonho.html">Sonho</a>
+								<li><a href="sonho.html">Objetivo</a>
 									<ul>
-										<li><a href="criar_sonho.html">Criar Sonho</a></li><br>
-										<li><a href="editar_sonho.html">Editar Sonho</a></li><br>
+										<li><a href="criar_sonho.html">Criar Objetivo</a></li><br>
+										<li><a href="editar_sonho.html">Listar Objetivos</a></li><br>
 										<li><a href="depositar_sonho.html">Depositar</a></li><br>
 										<li><a href="retirar_sonho.html">Retirada</a></li><br>
 									</ul>
@@ -45,7 +45,9 @@
 							</ul>
 						</div>
 						<div class="app__main">
-							<div class="text-container">								
+							<div class="text-container">	
+								
+								<h1>Colocar valor que atualiza com o progresso</h1>
 								
 							
 							</div>
