--- a/Save_Money_2/Save_Money_2/View/view_obj.html
+++ b/Save_Money_2/Save_Money_2/View/view_obj.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
 	<head>
-		<meta charset="utf-8">
+		<meta class="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>SaveMovey - Plataforma</title>
 		<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -25,14 +25,8 @@
 						<div class="app__menu">
 							<ul class="vMenu">
 								<li><a href="dashboard.html">Inicio</a></li>
-								<li><a href="#" class="vMenu--active">Visão Geral</a></li>
-								<li><a href="poupanca.html">Poupança</a>
-									<ul>
-										<li><a href="poupanca_depositar.html">Depositar</a></li><br>
-										<li><a href="poupanca_retirada.html">Retirada</a></li><br>
-									</ul>
-								</li>
-								<li><a href="sonho.html">Sonho</a>
+								<li><a href="#" class="vMenu--active">Visão Geral</a></li>								
+								<li><a href="sonho.html">Objetivo</a>
 									<ul>
 										<li><a href="criar_sonho.html">Criar Sonho</a></li><br>
 										<li><a href="editar_sonho.html">Editar Sonho</a></li><br>
@@ -52,34 +46,18 @@
 						</div>
 						<div class="app__main">
 							<div class="text-container">
-								<h3 class="app__main__title">Bem vindo(a) de volta!</h3>
-								<p>Logo abaixo segue seu planejamento referente ao mês atual.</p>
-								<div class="card-deck">
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Poupança</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted"><a href="poupanca.html"><button>Acessar</button></a> </small></p>
-									  </div>
-									</div>
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Sonhos</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted"><a href="sonho.html"><button>Acessar</button></a> </small></p>
-									  </div>
-									</div>
-									<div class="card">
-									  <img src="..." class="card-img-top" alt="...">
-									  <div class="card-body">
-										<h5 class="card-title">Total</h5>
-										<p class="card-text">Fazer uma imagem ou algo tipo que altere coma entrada e saída do valor</p>
-										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-									  </div>
-									</div>
-								  </div>
+								<h1>Criei o seu Objetivo</h1>
+								<form>
+									<label for="objetivo">Nome</label>								  
+									<input type="text" id="objetivo_id" placeholder="Nome do Objetivo" required="required" name="objetivo" />									
+									<label for="tempo_inicio">Tempo de início</label>
+									<input type="date" id="tempo_inicio" placeholder="12 meses" name="tempo_inicio" />
+									<label for="tempo_termino">Tempo de término</label>
+									<input type="date" id="tempo_termino" placeholder="12 meses" name="tempo_termino" />									
+									<label for="valor_sonho">Quanto por mês</label>
+									<input type="number" id="valor" placeholder="R$ 100,00" name="Valor" />							
+									<input type="submit" class="enviar button" onclick="Enviar();" value="Enviar" />
+								</form>
 							
 							</div>
 						</div>
