--- a/app/View/css/style.css
+++ b/app/View/css/style.css
@@ -374,7 +374,7 @@ label {
 
 
 
-input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="date"], input[type="tel"], input[type="url"], input[type="password"] {
+input[type="email"], select, input[type="number"], input[type="search"], input[type="text"], input[type="date"], input[type="tel"], input[type="url"], input[type="password"] {
   appearance: none;
   border: 1px solid #eee;
   width: 100%;
@@ -387,7 +387,7 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
   background-color: #f7f7f7;
   margin-bottom: 1.4em;
   display: block; }
-  input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="date"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus {
+  input[type="email"]:focus, select:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="date"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus {
     border-color: #81c95c;
     outline: 0;
     background-color: #ffffff; }
