--- a/app/View/css/style.css
+++ b/app/View/css/style.css
@@ -231,9 +231,9 @@ p {
   margin-bottom: 1.3em; }
 
 h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
+  margin: 2em 0 0.5em;
   line-height: 1.35;
-  color: #111;
+  color: white;
   font-weight: 400; }
 
 h5, h6 {
@@ -247,6 +247,7 @@ h1 {
   font-size: 2.074em; }
 
 h2 {
+  color: black;
   font-size: 1.728em; }
 
 h3 {
