--- a/app/View/css/style.css
+++ b/app/View/css/style.css
@@ -602,7 +602,7 @@ select {
   align-items: center;
   justify-content: space-between;
   height: 70px;
-  color: #fff;
+  color: #65b53d;
   transition: 0.7s; }
 
 .navbar__logo {
@@ -1244,3 +1244,24 @@ select {
         transition: none; } }
 
 /*TEST*/
+
+.vertical-menu {
+  width: 200px; /* Set a width if you like */
+}
+
+.vertical-menu a {
+  background-color: #eee; /* Grey background color */
+  color: black; /* Black text color */
+  display: block; /* Make the links appear below each other */
+  padding: 12px; /* Add some padding */
+  text-decoration: none; /* Remove underline from links */
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc; /* Dark grey background on mouse-over */
+}
+
+.vertical-menu a.active {
+  background-color: #4CAF50; /* Add a green color to the "active/current" link */
+  color: white;
+}
